--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:outlineAmbientShadowColor="#FF0000"
         android:src="@drawable/dailylist"
         app:layout_constraintBottom_toBottomOf="@+id/textOla"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,9 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Bom dia, adicione e visualize suas tarefas"
+        android:text="Olá, adicione e visualize suas tarefas"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:textStyle="italic"
         app:layout_constraintTop_toBottomOf="@+id/imageIcone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -49,14 +50,12 @@
         android:id="@+id/listaTarefas"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/background_item_lista"
-        app:layout_constraintBottom_toTopOf="@+id/botaoTarefas"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textOla"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textOla" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/background_item_lista"
+        app:layout_constraintBottom_toTopOf="@+id/botaoTarefas" />
 
     <TextView
         android:id="@+id/textVazio"
@@ -66,6 +65,9 @@
         android:textSize="18sp"
         android:textStyle="italic"
         android:visibility="gone"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,12 +77,9 @@
         android:id="@+id/botaoTarefas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:backgroundTint="#5195E5"
         android:text="Adicionar Tarefa"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginEnd="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
